--- a/index.html
+++ b/index.html
@@ -14,10 +14,27 @@
             text-align: center;
             font-family: Arial, sans-serif;
         }
+        .toolbar {
+            margin-bottom: 20px;
+        }
+        .toolbar button, .toolbar input {
+            margin-right: 10px;
+            padding: 10px;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
     <h1>Simple Drawing App</h1>
+    
+    <!-- Панель инструментов с кнопками для смены цвета и ластика -->
+    <div class="toolbar">
+        <label for="colorPicker">Color: </label>
+        <input type="color" id="colorPicker" value="#000000">
+        <button id="eraser">Eraser</button>
+        <button id="clearCanvas">Clear All</button>
+    </div>
+
     <canvas id="drawingCanvas" width="800" height="600"></canvas>
 
     <script src="app.js"></script>
